# substack

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  manage.py  pyproject.toml  start_django.sh
dotfiles/: .zshrc
llm/: docker-compose.yaml  pyproject.toml
llm/llm/falcon_7b/: settings.py
llm/llm/flan_15_small/: settings.py
llm/llm/interface/: __init__.py  utils.py
llm/parsers/: openai_export.py
llm/settings/: interface_types.py  model_settings.py
sms_forwarding/: README.md  docker-compose.yaml  pyproject.toml
sms_forwarding/api/: base.py
sms_forwarding/api/routes/sms_forwarding/: __init__.py
sms_forwarding/api/security/: verify_my_iphone.py
sms_forwarding/database/migrations/models/: 4_20250411234621_rename_message.py
sms_forwarding/database/models/mixins/: primary_key.py
sms_forwarding/database/models/sms_forwarding/: __init__.py
sms_forwarding/frontend/: jsconfig.json  package.json  vite.config.js
sms_forwarding/frontend/src/providers/: ErrorProvider.jsx  QueryProvider.jsx  ThemeProvider.jsx
sms_forwarding/frontend/src/routes/: index.jsx
sms_forwarding/settings/: connection_settings.py  iphone_settings.py  models_settings.py  tortoise_settings.py
sms_forwarding/sms_forwarding/: main.py  start.sh
sms_forwarding/sms_forwarding/shell/utils/: import_models.py
sms_relay/: Dockerfile  alembic.ini  pyproject.toml
sms_relay/api/clients/telnyx/: client.py
sms_relay/api/clients/websocket/: client.py
sms_relay/api/routes/: contact.py  conversation.py  integrations.py  relay_rule.py  sms_forwarding.py
sms_relay/api/routes/sms_forwarding/: __init__.py
sms_relay/api/schema/: pydantic_base.py
sms_relay/api/schema/conversation/: thread.py
sms_relay/api/schema/forwarding/: contact.py  message.py
sms_relay/api/schema/integration/: integration.py  telnyx_webhook.py
sms_relay/api/schema/mixins/: create_timestamped.py  primary_key.py
sms_relay/api/schema/relay/: rule.py
sms_relay/api/security/: verify_my_iphone.py
sms_relay/api/tests/routes/: test_sms_forwarding.py
sms_relay/api/tests/security/: test_verify_my_iphone.py
sms_relay/database/migrations/: env.py
sms_relay/database/migrations/models/: 0_20250410011044_init.py  0_20250410025157_init.py  1_20250410025317_add_message.py  2_20250410030312_add_contact.py  3_20250410031014_add_phone_number.py
sms_relay/database/migrations/utils/: contact_rule.py
sms_relay/database/models/: __init__.py  base.py
sms_relay/database/query/: base.py  contact.py  contact_rule_config.py  contact_rule_mapping.py  integration.py  message.py  rules.py  thread.py
sms_relay/frontend/: .prettierignore  index.html  package-lock.json  package.json  vite.config.js
sms_relay/frontend/src/: App.jsx  main.jsx
sms_relay/settings/: connection_settings.py  iphone_settings.py  models_settings.py  relay_settings.py  server_settings.py  tortoise_settings.py
sms_relay/sms_relay/: main.py  start.sh
sms_relay/sms_relay/shell/: main.py
update_for_select/: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
update_for_select/ft_jargon/: asgi.py  wsgi.py
update_for_select/library_management/: README.md  admin.py  models.py
update_for_select/library_management/api/: serializers.py  views.py
update_for_select/library_management/migrations/: 0001_initial.py  0002_populate.py
update_for_select/update_for_select/: asgi.py  settings.py  urls.py  wsgi.py
(+113 files in other folders)
