[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Emily Edmondson",email = "ecedmondson@gmail.com"}
]
readme = "README.md"
requires-python = "=3.11.5"
dependencies = [
    "transformers (<=4.39.0)",
    "einops (>=0.8.1,<0.9.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "numpy (>=1.24.4,<2.0.0)",
    "pathvalidate (>=3.2.3,<4.0.0)",
    "torch (==2.2.2)",
    "torchvision (==0.17.2)",
    "torchaudio (==2.2.2)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
